# BelfrySCAD

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  TODO.md  libraries.json  pyproject.toml
.claude/commands/: build-and-run.md
.github/workflows/: release.yml  test.yml
docs/: debugger.md  editor.md  evaluator.md  rendering.md  wysiwyg.md
resources/: neuscad.icns  neuscad.scad
scripts/: update_library_versions.py  validate_against_openscad.py
src/belfryscad/: __main__.py  main.py
src/belfryscad/engine/: evaluator.py  renderer.py
src/belfryscad/resources/: libraries.json
src/belfryscad/window/: animate.py  color_themes.py  console.py  customizer.py  data_viewers.py  debugger.py  document_manager.py  editor.py  library_manager.py  main_window.py  preferences.py  viewport.py
src/neuscad/: __main__.py  main.py
src/neuscad/engine/: evaluator.py  renderer.py
src/neuscad/resources/: libraries.json
src/neuscad/window/: data_viewers.py  debugger.py  editor.py  library_manager.py  main_window.py  preferences.py  viewport.py
tests/: test_color_themes.py  test_customizer.py  test_data_viewers.py  test_debugger.py  test_evaluator.py  test_read_only_tab.py  test_renderer.py  test_use_statement.py
