[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuscad"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "PySide6",
    "manifold3d",
    "moderngl",
    "numpy",
    "lib3mf",
    "Pillow",
    "setproctitle>=1.3.7",
    "openscad_parser>=2.5.2",
    "fonttools>=4.0",
    "shapely-polyskel>=0.1.2",
    "certifi",
]

[project.scripts]
neuscad = "neuscad.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neuscad"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "briefcase>=0.4.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

# ---------------------------------------------------------------------------
# Briefcase packaging
# ---------------------------------------------------------------------------

[tool.briefcase]
project_name = "NeuSCAD"
bundle = "com.belfrydw"
version = "0.1.0"
description = "Hybrid OpenSCAD + WYSIWYG procedural CAD system"
author = "Revar Desmera"
author_email = "revarbat@gmail.com"
url = "https://www.github.com/BelfrySCAD/NeuSCAD"

[tool.briefcase.app.neuscad]
formal_name = "NeuSCAD"
description = "Hybrid OpenSCAD + WYSIWYG procedural CAD system"
icon = "resources/neuscad"
sources = ["src/neuscad"]
requires = [
    "PySide6",
    "manifold3d",
    "moderngl",
    "numpy",
    "lib3mf",
    "Pillow",
    "setproctitle>=1.3.7",
    "openscad_parser>=2.5.2",
    "fonttools>=4.0",
    "./vendor/wheels/euclid3-0.1-py3-none-any.whl",
    "shapely-polyskel>=0.1.2",
    "certifi",
]

[tool.briefcase.app.neuscad.macOS]
min_os_version = "12.0"

[tool.briefcase.app.neuscad.macOS.info]
CFBundleDocumentTypes = [
    { CFBundleTypeName = "OpenSCAD File", CFBundleTypeExtensions = ["scad"], CFBundleTypeRole = "Editor", LSHandlerRank = "Default" },
]

[tool.briefcase.app.neuscad.windows]
installer_type = "msi"
