[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "belfryscad"
version = "0.16.5"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "PySide6",
    "manifold3d",
    "moderngl",
    "numpy",
    "lib3mf; platform_machine != 'aarch64' and platform_machine != 'ARM64'",
    "setproctitle>=1.3.7",
    "openscad_lalr_parser>=1.1.0",
    "openscad_evaluator>=1.1.0",
    "certifi",
]

[project.scripts]
belfryscad = "belfryscad.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/belfryscad"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "briefcase>=0.4.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

# ---------------------------------------------------------------------------
# Briefcase packaging
# ---------------------------------------------------------------------------

[tool.briefcase]
project_name = "BelfrySCAD"
bundle = "com.belfrydw"
version = "0.16.5"
description = "Hybrid OpenSCAD + WYSIWYG procedural CAD system"
author = "Revar Desmera"
author_email = "revarbat@gmail.com"
url = "https://www.github.com/BelfrySCAD/BelfrySCAD"

[tool.briefcase.app.belfryscad]
formal_name = "BelfrySCAD"
description = "Hybrid OpenSCAD + WYSIWYG procedural CAD system"
icon = "resources/belfryscad"
sources = ["src/belfryscad"]
requires = [
    "PySide6",
    "manifold3d",
    "moderngl",
    "numpy",
    "lib3mf; platform_machine != 'aarch64' and platform_machine != 'ARM64'",
    "setproctitle>=1.3.7",
    "openscad_lalr_parser>=1.1.0",
    "openscad_evaluator>=1.1.0",
    "./vendor/wheels/euclid3-0.1-py3-none-any.whl",
    "certifi",
]

[tool.briefcase.app.belfryscad.document_type.scad]
extension = "scad"
description = "OpenSCAD File"
icon = "resources/belfryscad"
url = "https://openscad.org"
mime_type = "text/x-openscad"

[tool.briefcase.app.belfryscad.document_type.scad.macOS]
CFBundleTypeRole = "Editor"
LSHandlerRank = "Alternate"
UTTypeConformsTo = ["public.plain-text", "public.source-code"]

[tool.briefcase.app.belfryscad.macOS]
min_os_version = "12.0"
universal_build = false

[tool.briefcase.app.belfryscad.windows]
installer_type = "msi"

[tool.briefcase.app.belfryscad.linux.appimage]
manylinux = "manylinux_2_28"
